Fix: Portal info: layout breaks down it title is long #44

--- a/plugins/bookmarks-by-zaso.css
+++ b/plugins/bookmarks-by-zaso.css
@@ -270,9 +270,6 @@
 #bkmrksTrigger:hover{
 	margin-top:0;
 }
-#sidebar #portaldetails h3.title{
-	width:auto;
-}
 .portal-list-bookmark span {
 	display:inline-block;
 	margin: -3px;
